tests/kubernetes/custom-3.2.2/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.2.2-noncompliant
policies:
  - ../../../../policies/kubernetes/worker-nodes/custom-3.2.2.yaml
resources:
  - rolebinding.yaml
results:
  - policy: cis-3-2-2-authorization-mode-not-alwaysallow
    rule: disallow-cluster-admin-binding
    resources:
      - noncompliant-rolebinding
    kind: RoleBinding
    result: fail
